--- a/index.html
+++ b/index.html
@@ -1,32 +1,101 @@
-<!-- Nur der geänderte Ausschnitt im Warenkorb-Header -->
-<section id="view-cart" style="display:none;">
-  <div class="card accent cart">
-    <div class="section-title">Einkaufskorb</div>
-
-    <div class="row" style="gap:8px;">
-      <div style="display:flex; gap:8px; flex-wrap:wrap; align-items:center;">
-        <button type="button" class="btn neutral" id="btn-check-all">Alle anhaken</button>
-        <button type="button" class="btn neutral" id="btn-uncheck-all">Alle abhaken</button>
-        <button type="button" class="btn orange" id="btn-clear-cart">Korb leeren</button>
-      </div>
-
-      <!-- NUR Store-Filter bleibt -->
-      <div class="row row-2" style="align-items:end;">
-        <div>
-          <label class="muted">Store-Filter</label>
-          <select id="store-filter"></select>
-        </div>
-        <div><!-- leer gelassen, damit Layout gleich bleibt --></div>
-      </div>
-
-      <div>
-        <div class="muted">Markierte Artikel taggen mit:</div>
-        <div id="store-buttons" style="display:flex; gap:8px; flex-wrap:wrap;"></div>
-        <div style="display:flex; gap:8px; flex-wrap:wrap; margin-top:6px;">
-          <button type="button" class="btn neutral" id="btn-clear-tags-selected">Tags von markierten entfernen</button>
-        </div>
-      </div>
+<!doctype html>
+<html lang="de">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+  <title>Rezepte & Einkauf</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <header>
+    <h1>Rezepte & Einkauf</h1>
+    <div class="tabs">
+      <button id="tab-recipes" data-tab="recipes" class="tab active">Rezepte</button>
+      <button id="tab-products" data-tab="products" class="tab">Produkte</button>
+      <button id="tab-cart" data-tab="cart" class="tab">Einkaufskorb</button>
     </div>
-  </div>
-  <div id="cart-list"></div>
-</section>
+  </header>
+
+  <main>
+    <!-- Rezepte -->
+    <section id="view-recipes">
+      <details id="recipe-editor" class="collapsible card">
+        <summary><span class="chev">▶</span> Neues Rezept</summary>
+        <div id="recipe-form"></div>
+      </details>
+
+      <div class="card accent recipes">
+        <div class="row row-2">
+          <input id="search-recipes" type="search" placeholder="Rezepte oder Zutaten suchen…"/>
+          <div class="right">
+            <button class="btn pink small" id="btn-export">Export</button>
+            <button class="btn pink small" id="btn-import">Import</button>
+            <input type="file" id="import-file" style="display:none"/>
+          </div>
+        </div>
+      </div>
+
+      <details class="collapsible card" id="recipe-filters">
+        <summary><span class="chev">▶</span> Filter nach Tags</summary>
+        <div style="padding:12px;">
+          <div id="filter-chips"></div>
+          <div style="margin-top:10px; display:flex; gap:8px; flex-wrap:wrap;">
+            <button class="btn pink-ghost" id="btn-clear-filters">Filter zurücksetzen</button>
+          </div>
+        </div>
+      </details>
+
+      <div id="recipe-list" class="grid"></div>
+    </section>
+
+    <!-- Produkte -->
+    <section id="view-products" style="display:none;">
+      <div class="card accent products">
+        <input id="search-products" type="search" placeholder="Produkte suchen…"/>
+      </div>
+      <div id="product-list"></div>
+    </section>
+
+    <!-- Einkaufskorb -->
+    <section id="view-cart" style="display:none;">
+      <div class="card accent cart">
+        <div class="section-title">Einkaufskorb</div>
+
+        <div class="row" style="gap:8px;">
+          <div style="display:flex; gap:8px; flex-wrap:wrap; align-items:center;">
+            <button type="button" class="btn neutral" id="btn-check-all">Alle anhaken</button>
+            <button type="button" class="btn neutral" id="btn-uncheck-all">Alle abhaken</button>
+            <button type="button" class="btn orange" id="btn-clear-cart">Korb leeren</button>
+          </div>
+
+          <div class="row row-2" style="align-items:end;">
+            <div>
+              <label class="muted">Store-Filter</label>
+              <select id="store-filter"></select>
+            </div>
+            <div></div>
+          </div>
+
+          <div>
+            <div class="muted">Markierte Artikel taggen mit:</div>
+            <div id="store-buttons" style="display:flex; gap:8px; flex-wrap:wrap;"></div>
+            <div style="display:flex; gap:8px; flex-wrap:wrap; margin-top:6px;">
+              <button type="button" class="btn neutral" id="btn-clear-tags-selected">Tags entfernen</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="cart-list"></div>
+    </section>
+  </main>
+
+  <div id="toast" class="toast"></div>
+
+  <script src="data.js"></script>
+  <script src="ui.js"></script>
+  <script src="recipes.js"></script>
+  <script src="products.js"></script>
+  <script src="cart.js"></script>
+  <script src="main.js"></script>
+</body>
+</html>
